# analisador-questoes-concurso

./: .env.example  .gitignore  CLAUDE.md  GETTING_STARTED.md  POSTGRESQL_SETUP.md  README.md  docker-compose.yml  pyproject.toml  temp_ocr_sample.txt  temp_text_no_ocr.txt  test_edital_api.py  test_groq.py  write_report.py
.claude/: settings.json  settings.local.json
.claude/hooks/: dev-servers.mjs  dev-servers.sh
.github/: ruleset-main.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: a5bba9cc283b_add_queue_and_confidence_fields.py  b1c2d3e4f5g6_enable_pgvector_extension.py
data/: quota_usage.json
docs/: ANALISE_PROFUNDA_ARQUITETURA.md  ARQUITETURA_COMPLETA.md
docs/plans/: 2026-01-08-frontend-data-lab-design.md  2026-01-13-analisador-questoes-design.md  2026-01-13-robustez-frontend-implementation.md  2026-01-17-docling-vision-extraction.md
frontend/: DEPLOY.md  README.md  package-lock.json  package.json  tailwind.config.js  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx
scripts/: fix_encoding.py  install.bat  install.sh  perplexity_search.py  setup_db.py
src/analysis/: __init__.py  clustering.py  cove_service.py  embeddings.py  map_service.py  pipeline.py  reduce_service.py  similarity.py
src/api/: main.py
src/classification/: classifier.py
src/cli/: main.py
src/core/: config.py  database.py  exceptions.py  logging.py
src/extraction/: confidence_scorer.py  docling_extractor.py  edital_extractor.py  hybrid_extractor.py  image_extractor.py  llm_parser.py  pci_parser.py  pdf_detector.py  pdf_validator.py  prova_extractor.py  quality_checker.py  vision_extractor.py
src/llm/: llm_orchestrator.py  quota_tracker.py
src/models/: __init__.py  analise_job.py  classificacao.py  cluster.py  edital.py  embedding.py  projeto.py  prova.py  questao.py  relatorio.py
src/optimization/: __init__.py  token_utils.py
src/report/: report_generator.py
src/schemas/: __init__.py  analise.py  classificacao.py  edital.py  projeto.py  prova.py  questao.py
src/services/: __init__.py  queue_processor.py
tests/: conftest.py  test_analise_api.py  test_classifier_throttling.py  test_llm_retry.py  test_quota_tracker.py  test_token_optimization.py  test_upload_classification.py  test_upload_filter.py
tests/analysis/: test_clustering.py  test_cove_service.py  test_map_service.py  test_pipeline.py  test_reduce_service.py
tests/api/: test_provas_queue.py
tests/extraction/: __init__.py  conftest.py  test_confidence_scorer.py  test_docling_extractor.py  test_hybrid_extractor.py  test_pdf_validator.py  test_quality_checker.py  (+1 more)
(+128 files in other folders)
